Improve project generator